--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <div id='images'>
     <img id='trash' src='emojis/trash.png'>
     <img id='clouds' src='emojis/722.png'>
+    <img id='rotate' src='emojis/rotate.png'>
 
     <img id='speechleft' src='emojis/speechleft.png'>
     <img id='speechright' src='emojis/speechright.png'>
