backgrounds randomized (for now)

--- a/index.html
+++ b/index.html
@@ -24,11 +24,16 @@
 
   </div>
   <div id="emojiChooser">
-    <img class="emojiIcon" id='img656' src='emojis/656.png'>
+    <img class="emojiIcon" id="656" src='emojis/icons/656.png'>
 
   </div>
 
   <div id='images'>
+    <img id='bgStatic' src='backgrounds/static.png'>
+    <img id='bgSpace' src='backgrounds/space.jpg'>
+    <img id='bgJungle' src='backgrounds/jungle.jpg'>
+    <img id='bgWave' src='backgrounds/bgwave.jpg'>
+
 
     <img id='trash' src='emojis/trash.png'>
     <img id='clouds' src='emojis/722.png'>
