changing bg works

--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
 
   <div id="backgroundsoption">
       <h3>backgrounds</h3>
+      Panel 1
       <select id="bg1">
       </select>
+      Panel 2
       <select id="bg2">
       </select>
+      Panel 3
       <select id="bg3">
       </select>
   </div>
