randomized backgrounds works

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
       Panel 3
       <select id="bg3">
       </select>
+      <button id="randombg">totally random backgrounds</button>
+      <button id="onerandombg">one random background</button>
+
   </div>
 
 </div>
