basically everything works

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <body>
   <div id="container">
     <div class="wrapper">
-      <div id="title">emoji comic generator</div>
       <canvas id="myCanvas" width="1000" height="310" keepalive="true"></canvas>
 
       <div id="controls">
@@ -31,7 +30,7 @@
         <div id="recent"></div>
 
         <div id="emojiChooser">
-
+        <img id="656" src="emojis/656.png">
 
 
         </div>
