added about page

--- a/index.html
+++ b/index.html
@@ -51,9 +51,13 @@
             <img src='emojis/down.png'>
             <img src='emojis/downloadicon2.png'>
           </div>
+          <div class="optionicon" data-click="info">
+            <img src='emojis/info.png'>
+            <img src='emojis/cool.png'>
+          </div>
         </div>
         <div id="options">
-        <h3> click a tab 2 c options</h3>
+        <h3>welcome to the emoji comic creator. the infinite is possible. the unattainable is unknown. you can do anything. <br><br>the only limit is yourself.</h3>
       </div>
     </div>
   </div>
@@ -84,17 +88,19 @@
 
   <div id="backgroundsoption">
       <h3>Backgrounds</h3>
-      Panel 1
+      <div class="options-container">
+      <div class="subtitle">Panel 1</div>
+      <div class="subtitle">Panel 2</div>
+      <div class="subtitle">Panel 3</div>
       <select id="bg1">
       </select>
-      Panel 2
       <select id="bg2">
       </select>
-      Panel 3
       <select id="bg3">
       </select>
-      <button id="randombg">totally random backgrounds</button>
-      <button id="onerandombg">one random background</button>
+    </div>
+      <button class="bgbutton" id="randombg">randomize each background</button>
+      <button class="bgbutton" id="onerandombg">matching random background</button>
 
   </div>
 
@@ -105,10 +111,22 @@
 
   </div>
 
+    <div id="info">
+   <div class="about"><img src="emojis/sparkles.png"><img src="emojis/sparkles.png"> <img src="emojis/tm.png"> <img src="emojis/copyright.png"> <img src="emojis/restricted.png"> 2014 lukey q <img src="emojis/sparkles.png"><img src="emojis/sparkles.png">
+    <br><img src="emojis/rightarrow.png"> catch me on <img src="emojis/bird.png"> <a target="_blank" href="http://twitter.com/nah_solo">twitter</a> <img src="emojis/bird.png"> <img src="emojis/leftarrow.png">
+    <br> <img src="emojis/cooldude.png"> see my other junk <a href="http://lucasquinn.com/projects" target="_blank">here</a>  <img src="emojis/tongueout.png">
+    <br><img src="emojis/656.png"> <img src="emojis/656.png"> <span class="we">"i only send emojis"</span> <img src="emojis/656.png"> <img src="emojis/656.png">
+  </p></div>
+
+    </div>
+
 </div>
 
 <div id='images'>
   <img id='bgPinkBlue' src='backgrounds/pinkblue.jpg'>
+  <img id='bgBarbershop' src='backgrounds/barbershop.jpg'>
+  <img id='bgTatooine' src='backgrounds/tattooine.jpg'>
+  <img id='bgBridge' src='backgrounds/bridge.jpg'>
 
   <img id='bgStatic' src='backgrounds/static.png'>
   <img id='bgSpace' src='backgrounds/space.jpg'>
