--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="recent"></div>
 
         <div id="emojiChooser">
-        <img id="656" src="emojis/656.png">
+          <img id="656" src="emojis/656.png">
 
 
         </div>
@@ -57,68 +57,88 @@
           </div>
         </div>
         <div id="options">
-        <h3>welcome to the emoji comic creator. the infinite is possible. the unattainable is unknown. you can do anything. <br><br>the only limit is yourself.</h3>
+          <h3>welcome to the emoji comic creator. the infinite is possible. the unattainable is unknown. you can do anything. <br><br>the only limit is yourself.</h3>
+        </div>
       </div>
     </div>
+
   </div>
 
-</div>
-
-<div id="hiddenoptions">
-  <div id="speech">
-      <h3>Speech Bubbles</h3>
+  <div id="hiddenoptions">
+    <div id="speech">
       <button id="textGo">make speech bubble</button>
-    <div id="textcontainer">
-    <input id="textInput" placeholder="type here" type="text"><br>
+      <div id="textcontainer">
+        <input id="textInput" placeholder="text goes here" type="text"><br>
       </div>
       <hr>
-      <input type="radio" name="speechtype" checked="checked" value="speechleft">Speech (L)
-      <input type="radio" name="speechtype" value="speechright">Speech (R)
-      <input type="radio" name="speechtype" value="thoughtleft">Thought (L)
-      <input type="radio" name="speechtype" value="thoughtright">Thought (R)
-      <hr>SIZE:
-      <input type="radio" name="fontsize" value="10">small
-      <input type="radio" name="fontsize" checked="checked" value="20">normal
-      <input type="radio" name="fontsize" value="30">big
-      <hr>FONT FACE:
-      <input type="radio" name="fontface" value="Inconsolata">robot
-      <input type="radio" name="fontface" checked="checked" value="Open Sans">normal
-      <input type="radio" name="fontface" value="Pacifico">cursive
-  </div>
-
-  <div id="backgroundsoption">
-      <h3>Backgrounds</h3>
-      <div class="options-container">
-      <div class="subtitle">Panel 1</div>
-      <div class="subtitle">Panel 2</div>
-      <div class="subtitle">Panel 3</div>
-      <select id="bg1">
-      </select>
-      <select id="bg2">
-      </select>
-      <select id="bg3">
-      </select>
+      <div id="theradio">
+      <input type="radio" id="radioSpeechL" name="speechtype" checked="checked" value="speechleft">
+      <label for="radioSpeechL">
+            <img class="speechselect" src='emojis/speechleft.png'>
+      </label>
+      <input type="radio" id="radioSpeechR" name="speechtype" value="speechright">
+      <label for="radioSpeechR">
+            <img class="speechselect" src='emojis/speechright.png'>
+      </label>
+      <input type="radio" id="radioThoughtL" name="speechtype" value="thoughtleft">
+      <label for="radioThoughtL">
+            <img class="speechselect" src='emojis/thoughtleft.png'>
+      </label>
+      <input type="radio" id="radioThoughtR" name="speechtype" value="thoughtright">
+      <label for="radioThoughtR">
+            <img class="speechselect" src='emojis/thoughtright.png'>
+      </label>
+      <br>
+      <input type="radio" id="radioFontS" name="fontsize" value="10">
+      <label for="radioFontS">small</label>
+      <input type="radio" id="radioFontM" name="fontsize" checked="checked" value="20">
+      <label for="radioFontM">normal</label>
+      <input type="radio" id="radioFontL" name="fontsize" value="30">
+      <label for="radioFontL">big</label>
+      <input type="radio" id="radioFontRobot" name="fontface" value="Inconsolata">
+      <br>
+      <label class="robotfont" for="radioFontRobot">robot</label>
+      <input type="radio" id="radioFontNormal" name="fontface" checked="checked" value="Open Sans">
+      <label class="normalfont" for="radioFontNormal">normal</label>
+      <input type="radio" id="radioFontCursive" name="fontface" value="Pacifico">
+      <label class="cursivefont" for="radioFontCursive">cursive</label>
     </div>
+    </div>
+
+    <div id="backgroundsoption">
+      <div class="options-container">
+        <div class="subtitle">Panel 1</div>
+        <div class="subtitle">Panel 2</div>
+        <div class="subtitle">Panel 3</div>
+        <select id="bg1">
+        </select>
+        <select id="bg2">
+        </select>
+        <select id="bg3">
+        </select>
+      </div>
       <button class="bgbutton" id="randombg">randomize each background</button>
       <button class="bgbutton" id="onerandombg">matching random background</button>
 
-  </div>
+    </div>
 
-  <div id="save">
-      <button id="savetofile">save to file</button>
-<a id="download">Download as image</a>
-<button id="download33">Download as image</button>
-
-  </div>
-
-    <div id="info">
-   <div class="about"><img src="emojis/sparkles.png"><img src="emojis/sparkles.png"> <img src="emojis/tm.png"> <img src="emojis/copyright.png"> <img src="emojis/restricted.png"> 2014 lukey q <img src="emojis/sparkles.png"><img src="emojis/sparkles.png">
-    <br><img src="emojis/rightarrow.png"> catch me on <img src="emojis/bird.png"> <a target="_blank" href="http://twitter.com/nah_solo">twitter</a> <img src="emojis/bird.png"> <img src="emojis/leftarrow.png">
-    <br> <img src="emojis/cooldude.png"> see my other junk <a href="http://lucasquinn.com/projects" target="_blank">here</a>  <img src="emojis/tongueout.png">
-    <br><img src="emojis/656.png"> <img src="emojis/656.png"> <span class="we">"i only send emojis"</span> <img src="emojis/656.png"> <img src="emojis/656.png">
-  </p></div>
+    <div id="save">
+      <a id="download"><button class="downloadbutton">
+        <img src='emojis/downloadicon2.png'>
+        <img src='emojis/downloadicon2.png'>
+        <img src='emojis/downloadicon2.png'>
+      </button></a>
 
     </div>
+
+    <div id="info">
+     <div class="about"><img src="emojis/sparkles.png"><img src="emojis/sparkles.png"> <img src="emojis/tm.png"> <img src="emojis/copyright.png"> <img src="emojis/restricted.png"> 2014 lukey q <img src="emojis/sparkles.png"><img src="emojis/sparkles.png">
+      <br><img src="emojis/rightarrow.png"> catch me on <img src="emojis/bird.png"> <a target="_blank" href="http://twitter.com/nah_solo">twitter</a> <img src="emojis/bird.png"> <img src="emojis/leftarrow.png">
+      <br> <img src="emojis/cooldude.png"> see my other junk <a href="http://lucasquinn.com/projects" target="_blank">here</a>  <img src="emojis/tongueout.png">
+      <br><img src="emojis/656.png"> <img src="emojis/656.png"> <span class="we">"i only send emojis"</span> <img src="emojis/656.png"> <img src="emojis/656.png">
+    </p></div>
+
+  </div>
 
 </div>
 
