--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
           </div>
         </div>
         <div id="options">
-          <h3>welcome to the emoji comic creator. the infinite is possible. the unattainable is unknown. you can do anything. <br><br>the only limit is yourself.</h3>
+          <h3>welcome to the emoji comic creator.</h3>
+          <p><img class="helpimg" src="emojis/uparrow.png"><img class="helpimg" src="emojis/uparrow.png"> click tabs to see options <img class="helpimg" src="emojis/uparrow.png"><img class="helpimg" src="emojis/uparrow.png">
+           <p><img class="helpimg" src="emojis/leftarrow.png"><img class="helpimg" src="emojis/leftarrow.png"><img class="helpimg" src="emojis/leftarrow.png"> click an emoji to add to comic
         </div>
       </div>
     </div>
