fixed download filename

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   <img id='speechright' src='emojis/speechright.png'>
   <img id='thoughtleft' src='emojis/thoughtleft.png'>
   <img id='thoughtright' src='emojis/thoughtright.png'>
-
+  <canvas id="newCanvas"></div>
 </div>
 </body>
 </html>
